--- a/src/components/Header.astro
+++ b/src/components/Header.astro
@@ -1,12 +1,6 @@
 ---
 import { css, cva, type Styles } from "../../styled-system/css";
-import {
-  bg_extend,
-  center,
-  circle,
-  hstack,
-  vstack,
-} from "../../styled-system/patterns";
+import { center, circle, hstack, vstack } from "../../styled-system/patterns";
 
 const links = [
   { name: "TOP", target: "/" },
@@ -42,6 +36,10 @@ const site_name = cva({
     paddingBlock: "10",
     paddingInline: "9",
     lineHeight: "1",
+    opacity: "0",
+    _loaded: {
+      animation: "appear",
+    },
   },
   variants: {
     color: {
@@ -61,9 +59,11 @@ const nav = center({
   fontSize: "6xl",
   bg: "bg.menu",
   clipPath: "circle(0 at right top)",
+  opacity: "0",
   transition: "clip-path .8s",
   transitionTimingFunction: "easeOutExpo",
   _groupExpanded: {
+    opacity: "1",
     clipPath: "circle(max(120vw, 120lvh) at right top)",
   },
 });
