feat: add download links

--- a/src/components/top/History.astro
+++ b/src/components/top/History.astro
@@ -27,6 +27,11 @@ const fluid_container = css({
 <TopSection heading="HISTORY" href="/history" class={section}>
   <ul>
     <li>
+      <li>
+        <HistoryItem date={new Date("2024-12-17")}>
+          ダウンロードリンクを追加
+        </HistoryItem>
+      </li>
       <HistoryItem date={new Date("2024-12-15")}>サイトを公開</HistoryItem>
     </li>
   </ul>
