--- a/src/pages/history.astro
+++ b/src/pages/history.astro
@@ -9,6 +9,11 @@ import PageLayout from "../layouts/PageLayout.astro";
   <Section heading="HISTORY">
     <ul class={css({ color: "text.dark" })}>
       <li>
+        <HistoryItem date={new Date("2024-12-17")}>
+          ダウンロードリンクを追加
+        </HistoryItem>
+      </li>
+      <li>
         <HistoryItem date={new Date("2024-12-15")}>サイトを公開</HistoryItem>
       </li>
     </ul>
