refactor: move utils

--- a/src/components/BlogItem.astro
+++ b/src/components/BlogItem.astro
@@ -1,7 +1,7 @@
 ---
 import { css } from "../../styled-system/css";
 import { divider } from "../../styled-system/patterns";
-import { format } from "../util";
+import { format } from "../utils";
 
 interface Props {
   date: Date;
