--- a/src/components/HistoryItem.astro
+++ b/src/components/HistoryItem.astro
@@ -1,6 +1,6 @@
 ---
 import { divider, stack } from "../../styled-system/patterns";
-import { format } from "../util";
+import { format } from "../utils";
 
 interface Props {
   date: Date;
