--- a/src/components/top/History.astro
+++ b/src/components/top/History.astro
@@ -4,6 +4,7 @@ import { container } from "../../../styled-system/patterns";
 import Fluid from "../Fluid.astro";
 import HistoryItem from "../HistoryItem.astro";
 import TopSection from "./TopSection.astro";
+import "../../utils/historyGenerator";
 
 const section = container({
   paddingInline: "px.container",
