--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -1,7 +1,7 @@
 ---
 import type { InferEntrySchema } from "astro:content";
 import Section from "../components/Section.astro";
-import { format } from "../util";
+import { format } from "../utils";
 import { css } from "../../styled-system/css";
 import { markdown } from "../recipes/markdown";
 import PageLayout from "./PageLayout.astro";
