--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -57,7 +57,7 @@ const body = css({
 </html>
 
 <script>
-  import "../externalLink";
+  import "../utils/externalLink";
 
   window.addEventListener("load", () => {
     document.body.classList.add("loaded");
