--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -24,7 +24,7 @@ const { class: className, ...rest } = Astro.props;
 <script>
   import { gsap, Expo } from "gsap";
   import { ScrollTrigger } from "gsap/ScrollTrigger";
-  import { splitText } from "../util";
+  import { splitText } from "../utils";
 
   gsap.registerPlugin(ScrollTrigger);
 
