feat: add blog article

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -18,7 +18,7 @@ const title = css({
   pos: "relative",
   borderBottom: "1px solid {colors.text.dark}",
   fontSize: "4xl",
-  wordBreak: "keep-all",
+  textWrap: "unset",
 });
 ---
 
