--- a/src/pages/works.astro
+++ b/src/pages/works.astro
@@ -13,10 +13,10 @@ const works = await getCollection("work");
     <ul
       class={container({
         display: "grid",
-        gridTemplateColumns: "repeat(auto-fit, minmax(35rem, 1fr))",
+        gridTemplateColumns: "repeat(auto-fit, minmax(25rem, 1fr))",
         gap: "16",
         maxWidth: "8xl",
-        paddingInline: "px.container",
+        paddingInline: "0",
         paddingBottom: "20",
       })}
     >
