--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -28,7 +28,7 @@ const title = css({
   ogImage={frontmatter.image}
   ogAlt={frontmatter.title}
 >
-  <Section heading="BLOG">
+  <Section heading="BLOG" href="/blog">
     <time
       datetime={frontmatter.pubDate.toISOString()}
       class={css({
