--- a/src/layouts/WorkLayout.astro
+++ b/src/layouts/WorkLayout.astro
@@ -24,7 +24,7 @@ const heading = css({
   description={frontmatter.description}
   pageType="article"
 >
-  <Section heading="WORKS" href="/works">
+  <Section heading="WORKS">
     <h2 class={heading}>{frontmatter.name}</h2>
     <div class={markdown({ type: "work" })}>
       <slot />
