fix link card style

--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -5,12 +5,14 @@ import { format } from "../utils";
 import { css } from "../../styled-system/css";
 import { markdown } from "../recipes/markdown";
 import PageLayout from "./PageLayout.astro";
+import type { MarkdownHeading } from "astro";
 
 interface Props {
   frontmatter: InferEntrySchema<"blog">;
+  headings: MarkdownHeading[];
 }
 
-const { frontmatter } = Astro.props;
+const { frontmatter, headings } = Astro.props;
 
 const title = css({
   marginBottom: "10",
@@ -42,6 +44,9 @@ const title = css({
     <h2 class={title}>
       {frontmatter.title}
     </h2>
+    <div>
+      <ul></ul>
+    </div>
     <div class={markdown({ type: "blog" })}>
       <slot />
     </div>
