--- a/src/components/DownloadButton.astro
+++ b/src/components/DownloadButton.astro
@@ -12,7 +12,7 @@ const button = css({
   pos: "relative",
   display: "inline-block",
   fontFamily: "dots",
-  fontSize: "3xl",
+  fontSize: "2rem",
   color: "text.dark",
   bg: "bg.button",
   paddingInline: "10",
@@ -20,7 +20,7 @@ const button = css({
   borderRadius: "full",
   transition: "transform 0.3s {easings.easeOutExpo}",
   _hover: {
-    transform: "scale(1.05)",
+    transform: "translateY(3px)",
   },
 });
 ---
