--- a/src/components/WorkItem.astro
+++ b/src/components/WorkItem.astro
@@ -21,7 +21,7 @@ const work_item = vstack({
   height: "100%",
   transition: "transform 0.3s {easings.easeOutExpo}",
   _hover: {
-    transform: "scale(1.025)",
+    transform: "translateY(-5px)",
   },
 });
 ---
