--- a/src/components/top/WorkSlider.astro
+++ b/src/components/top/WorkSlider.astro
@@ -35,7 +35,7 @@ const swiper_pagination = css({
     },
     transition: "transform 0.5s {easings.easeOutExpo}",
     _hover: {
-      transform: "scale(1.1)",
+      transform: "translateY(-3px)",
     },
   },
 });
