--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -15,12 +15,29 @@ interface Props {
 const { frontmatter, headings } = Astro.props;
 
 const title = css({
-  marginBottom: "10",
+  marginBottom: "16",
   paddingBottom: "6",
   pos: "relative",
   borderBottom: "1px solid {colors.text.dark}",
   fontSize: "4xl",
   textWrap: "unset",
+  fontWeight: "700",
+});
+
+const headingStyle = css({
+  marginBottom: "16",
+  "& li": {
+    padding: "4",
+    color: "#777",
+    borderRadius: "xl",
+    _hover: {
+      bg: "#CCC",
+      color: "text",
+    },
+  },
+  "& .heading-3": {
+    marginLeft: "8",
+  },
 });
 ---
 
@@ -44,9 +61,18 @@ const title = css({
     <h2 class={title}>
       {frontmatter.title}
     </h2>
-    <div>
-      <ul></ul>
-    </div>
+    <ul class={headingStyle}>
+      {
+        headings.map(
+          ({ depth, slug, text }) =>
+            (depth == 2 || depth == 3) && (
+              <li class={`heading-${depth}`}>
+                <a href={`#${slug}`}>{text}</a>
+              </li>
+            )
+        )
+      }
+    </ul>
     <div class={markdown({ type: "blog" })}>
       <slot />
     </div>
