--- a/src/components/top/Blog.astro
+++ b/src/components/top/Blog.astro
@@ -1,10 +1,10 @@
 ---
-import { getCollection } from "astro:content";
 import { container, vstack } from "../../../styled-system/patterns";
 import BlogItem from "../BlogItem.astro";
 import TopSection from "./TopSection.astro";
+import { getPosts } from "../../utils";
 
-const blog = await getCollection("blog");
+const blog = await getPosts();
 
 const section = container({
   paddingInline: "px.container",
