--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,10 +7,9 @@ import History from "../components/top/History.astro";
 import Works from "../components/top/Works.astro";
 import { css } from "../../styled-system/css";
 
-import { getImage } from "astro:assets";
-import background from "../assets/first_view/background.png";
-
-const optimizedBackground = await getImage({ src: background, format: "webp" });
+import background from "../assets/first_view/sakura.png";
+import { Image } from "astro:assets";
+import styles from "./index.styles";
 ---
 
 <Layout
@@ -18,19 +17,8 @@ const optimizedBackground = await getImage({ src: background, format: "webp" });
     bg: "bg.top",
   })}
 >
-  <div
-    class={css({
-      pos: "fixed",
-      zIndex: "-100",
-      top: "0",
-      width: "100%",
-      height: "100lvh",
-      backgroundSize: "cover",
-      backgroundPosition: "bottom",
-      backgroundColor: "bg.top",
-    })}
-    style={{ backgroundImage: `url(${optimizedBackground.src})` }}
-  >
+  <div class={styles.background}>
+    <Image src={background} alt="" />
   </div>
   <FirstView />
   <Blog />
