fix: build error

--- a/src/components/Contents.astro
+++ b/src/components/Contents.astro
@@ -110,10 +110,7 @@ const ContentsStyle = css({
           // open属性を付与
           el.setAttribute("open", "true");
           // アコーディオンを開くときの処理
-          const openingAnim = contents.animate(
-            openingAnimation(contents),
-            animTiming
-          );
+          contents.animate(openingAnimation(contents), animTiming);
         }
       });
     });
