fix: no LCP error

--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -37,7 +37,7 @@ const image_wrapper = circle({
   size: "xs",
   bg: "bg",
   border: "normal",
-  opacity: "0",
+  opacity: "1%",
   _loaded: {
     animation: "slide_in",
   },
