--- a/src/components/top/FirstView.astro
+++ b/src/components/top/FirstView.astro
@@ -60,7 +60,7 @@ const name = bg_extend({
 <div class={cont}>
   <div class={vstack({ gap: "20" })}>
     <div class={image_wrapper}>
-      <Image src={icon} alt="にとのアイコン" class={icon_img} />
+      <Image src={icon} alt="にとのアイコン" class={icon_img} loading="eager" />
     </div>
     <p class={name}>
       <span> NITO </span>
