--- a/src/layouts/BlogLayout.astro
+++ b/src/layouts/BlogLayout.astro
@@ -12,7 +12,7 @@ interface Props {
   headings: MarkdownHeading[];
 }
 
-const { frontmatter, headings } = Astro.props;
+const { frontmatter } = Astro.props;
 
 const title = css({
   marginBottom: "10",
