--- a/src/components/Heading.astro
+++ b/src/components/Heading.astro
@@ -40,8 +40,9 @@ const { class: className, href, ...rest } = Astro.props;
   window.addEventListener("load", () => {
     const headings = gsap.utils.toArray(".heading") as HTMLElement[];
     headings.forEach((target) => {
-      let text;
-      text = splitText(target.hasChildNodes() ? target.children[0] : target);
+      const text = splitText(
+        target.hasChildNodes() ? target.children[0] : target,
+      );
 
       gsap.set(target, {
         opacity: 1,
