--- a/src/components/LinkItem.astro
+++ b/src/components/LinkItem.astro
@@ -1,4 +1,5 @@
 ---
+import type { ImageMetadata } from "astro";
 import { Image } from "astro:assets";
 import { css } from "../../styled-system/css";
 
