--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -18,7 +18,7 @@ import styles from "./index.styles";
   })}
 >
   <div class={styles.background}>
-    <Image src={background} alt="" />
+    <Image src={background} alt="" loading="eager" />
   </div>
   <FirstView />
   <Blog />
